--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.71.10:2181
 spring.dubbo.base-package=com.atguigu.gmall
 spring.dubbo.application=gmall-manage-service
+spring.dubbo.protocol.port=20881
 
 spring.redis.host=192.168.71.10
 spring.redis.database=0
