--- a/gmall-user-service/src/main/resources/application.properties
+++ b/gmall-user-service/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.71.10:2181
 spring.dubbo.base-package=com.atguigu.gmall
 spring.dubbo.application=gmall-user-service
+spring.dubbo.protocol.port=20880
+
+spring.redis.database=0
+spring.redis.host=192.168.71.10
+spring.redis.port=6379
